[package]
name = "range_ranger"
version = "0.1.2"
authors = ["Julien Roncaglia <julien@roncaglia.fr>"]
edition = "2018"
rust-version = "1.63"
license = "MIT"
description = "A range library"
repository = "https://github.com/vbfox/range_ranger"
documentation = "https://docs.rs/range_ranger"
readme = "Readme.md"
keywords = ["range", "interval", "math"]
categories = ["algorithms", "data-structures"]

[dependencies]

[dev-dependencies]
chrono = "0.4"
assert_matches = "1.5"
